@@ -56,16 +56,13 @@ public class ObjectToDecode implements IJavaDynamicTypeConverter {
      * @param targetType     Class<?>
      * @param valueToConvert Object
      * @return Object
-     * @throws JavaTypeTranslatorException
-     * @see IJavaDynamicTypeConverter#convert(Class<?>,
-     * Object)
      */
     public Object convert(Class<?> targetType, Object valueToConvert) throws JavaTypeTranslatorException {
-        Object rVal = null;
+        Object rVal;
 
         if (Decode.class.isAssignableFrom(targetType)) {
             try {
-                Decode vt = (Decode) targetType.newInstance();
+                Decode vt = (Decode) targetType.getDeclaredConstructor().newInstance();
 
                 // Assign the value for the valuetype
                 vt.setValue(valueToConvert);
@@ -87,16 +84,9 @@ public class ObjectToDecode implements IJavaDynamicTypeConverter {
      * @param targetType     Class<?>
      * @param valueToConvert Object
      * @return boolean
-     * @see IJavaDynamicTypeConverter#
-     * supportsConversion (Class<?>, Object)
      */
     public boolean supportsConversion(Class<?> targetType, Object valueToConvert) {
-        boolean rVal = false;
 
-        if (Decode.class.isAssignableFrom(targetType)) {
-            rVal = true;
-        }
-
-        return (rVal);
+        return (Decode.class.isAssignableFrom(targetType));
     }
 }
