@@ -73,27 +73,34 @@ public class ContractHome {
                                     ZonedDateTime expiryDate) {
 
         try {
+
             EntityManager entityManager = EntityManagerHelper.getEntityManager();
             entityManager.getTransaction().begin();
             CriteriaBuilder builder = entityManager.getCriteriaBuilder();
             CriteriaQuery<Contract> query = builder.createQuery(Contract.class);
             Root<Contract> from = query.from(Contract.class);
             query.select(from);
-            List<Predicate> predicates = new ArrayList<Predicate>();
+            List<Predicate> predicates = new ArrayList<>();
 
             if (null != SECType) {
+
                 Predicate predicate = builder.equal(from.get("secType"), SECType);
                 predicates.add(predicate);
             }
+
             if (null != symbol) {
+
                 Predicate predicate = builder.equal(from.get("symbol"), symbol);
                 predicates.add(predicate);
             }
             if (null != exchange) {
+
                 Predicate predicate = builder.equal(from.get("exchange"), exchange);
                 predicates.add(predicate);
             }
+
             if (null != currency) {
+
                 Predicate predicate = builder.equal(from.get("currency"), currency);
                 predicates.add(predicate);
             }
@@ -109,12 +116,15 @@ public class ContractHome {
                 Predicate predicateMonth = builder.equal(month, monthExpiry);
                 predicates.add(predicateMonth);
             }
+
             query.where(predicates.toArray(new Predicate[]{}));
             TypedQuery<Contract> typedQuery = entityManager.createQuery(query);
             List<Contract> items = typedQuery.getResultList();
             entityManager.getTransaction().commit();
-            if (items.size() > 0) {
-                return items.get(0);
+
+            if (!items.isEmpty()) {
+
+                return items.getFirst();
             }
             return null;
         } catch (Exception re) {
@@ -134,10 +144,13 @@ public class ContractHome {
     public Contract findById(Integer id) {
 
         try {
+
             EntityManager entityManager = EntityManagerHelper.getEntityManager();
             entityManager.getTransaction().begin();
             Contract instance = entityManager.find(Contract.class, id);
+
             if (null != instance) {
+
                 instance.getTradePositions().size();
             }
             entityManager.getTransaction().commit();
