@@ -47,7 +47,6 @@ import org.trade.core.dao.EntityManagerHelper;
 import org.trade.core.util.CoreUtils;
 import org.trade.core.util.TradingCalendar;
 import org.trade.dictionary.valuetype.Currency;
-import org.trade.persistent.PersistentModelException;
 
 import java.util.ArrayList;
 import java.util.List;
@@ -71,6 +70,7 @@ public class PortfolioHome {
     public Portfolio findById(Integer id) {
 
         try {
+
             EntityManager entityManager = EntityManagerHelper.getEntityManager();
             entityManager.getTransaction().begin();
             Portfolio instance = entityManager.find(Portfolio.class, id);
@@ -93,6 +93,7 @@ public class PortfolioHome {
     public List<Portfolio> findAll() {
 
         try {
+
             EntityManager entityManager = EntityManagerHelper.getEntityManager();
             entityManager.getTransaction().begin();
             CriteriaBuilder builder = entityManager.getCriteriaBuilder();
@@ -122,6 +123,7 @@ public class PortfolioHome {
     public Portfolio findDefault() {
 
         try {
+
             Portfolio portfolio = null;
             EntityManager entityManager = EntityManagerHelper.getEntityManager();
             entityManager.getTransaction().begin();
@@ -130,6 +132,7 @@ public class PortfolioHome {
             Root<Portfolio> from = query.from(Portfolio.class);
             query.select(from);
             List<Portfolio> items = entityManager.createQuery(query).getResultList();
+
             for (Portfolio item : items) {
 
                 if (item.getIsDefault()) {
@@ -158,6 +161,7 @@ public class PortfolioHome {
     public Portfolio findByName(String name) {
 
         try {
+
             EntityManager entityManager = EntityManagerHelper.getEntityManager();
             entityManager.getTransaction().begin();
             CriteriaBuilder builder = entityManager.getCriteriaBuilder();
@@ -166,12 +170,17 @@ public class PortfolioHome {
             query.select(from);
             query.where(builder.equal(from.get("name"), name));
             List<Portfolio> items = entityManager.createQuery(query).getResultList();
+
             for (Portfolio item : items) {
+
                 item.getPortfolioAccounts().size();
             }
+
             entityManager.getTransaction().commit();
-            if (items.size() > 0) {
-                return items.get(0);
+
+            if (!items.isEmpty()) {
+
+                return items.getFirst();
             }
             return null;
 
@@ -198,12 +207,10 @@ public class PortfolioHome {
             Root<Portfolio> from = query.from(Portfolio.class);
             query.select(from);
             List<Portfolio> items = entityManager.createQuery(query).getResultList();
+
             for (Portfolio item : items) {
-                if (item.getId().equals(defaultPortfolio.getId())) {
-                    item.setIsDefault(true);
-                } else {
-                    item.setIsDefault(false);
-                }
+
+                item.setIsDefault(item.getId().equals(defaultPortfolio.getId()));
                 entityManager.persist(item);
             }
             entityManager.getTransaction().commit();
@@ -218,49 +225,65 @@ public class PortfolioHome {
     /**
      * Method persistPortfolio.
      *
-     * @param portfolio Portfolio
+     * @param instance Portfolio
      * @return Portfolio
-     * @throws PersistentModelException
      */
 
-    public synchronized Portfolio persistPortfolio(final Portfolio instance) throws PersistentModelException {
+    public synchronized Portfolio persistPortfolio(final Portfolio instance) {
+
         try {
+
             EntityManager entityManager = EntityManagerHelper.getEntityManager();
             entityManager.getTransaction().begin();
             Portfolio portfolio = findPortfolioByName(instance.getName());
+
             if (null == portfolio) {
+
                 instance.setLastUpdateDate(TradingCalendar.getDateTimeNowMarketTimeZone());
+
                 for (PortfolioAccount item : instance.getPortfolioAccounts()) {
+
                     Account account = findByAccountNumber(item.getAccount().getAccountNumber());
+
                     if (null == account) {
+
                         item.getAccount().setCurrency(Currency.USD);
                         item.getAccount().setName(item.getAccount().getAccountNumber());
                         item.getAccount().setLastUpdateDate(TradingCalendar.getDateTimeNowMarketTimeZone());
                     } else {
+
                         item.setAccount(account);
                     }
                 }
                 entityManager.persist(instance);
 
             } else {
+
                 if (0 != CoreUtils.nullSafeComparator(portfolio.getAllocationMethod(),
                         instance.getAllocationMethod())) {
+
                     portfolio.setAllocationMethod(instance.getAllocationMethod());
                     portfolio.setLastUpdateDate(TradingCalendar.getDateTimeNowMarketTimeZone());
                 }
+
                 for (PortfolioAccount item : instance.getPortfolioAccounts()) {
 
                     Account account = findByAccountNumber(item.getAccount().getAccountNumber());
                     if (null == account) {
+
                         item.getAccount().setCurrency(Currency.USD);
                         item.getAccount().setName(item.getAccount().getAccountNumber());
                         item.getAccount().setLastUpdateDate(TradingCalendar.getDateTimeNowMarketTimeZone());
                     } else {
+
                         item.setAccount(account);
                     }
+
                     PortfolioAccount portfolioAccount = findByNameAndAccountNumber(portfolio.getName(),
                             item.getAccount().getAccountNumber());
+
                     if (null == portfolioAccount) {
+
                         item.setPortfolio(portfolio);
                         portfolio.getPortfolioAccounts().add(item);
                     }
@@ -285,22 +308,20 @@ public class PortfolioHome {
      */
     private Account findByAccountNumber(String accountNumber) {
 
-        try {
-            EntityManager entityManager = EntityManagerHelper.getEntityManager();
-            CriteriaBuilder builder = entityManager.getCriteriaBuilder();
-            CriteriaQuery<Account> query = builder.createQuery(Account.class);
-            Root<Account> from = query.from(Account.class);
-            query.select(from);
-            query.where(builder.equal(from.get("accountNumber"), accountNumber));
-            List<Account> items = entityManager.createQuery(query).getResultList();
-            if (items.size() > 0) {
-                return items.get(0);
-            }
-            return null;
+        EntityManager entityManager = EntityManagerHelper.getEntityManager();
+        CriteriaBuilder builder = entityManager.getCriteriaBuilder();
+        CriteriaQuery<Account> query = builder.createQuery(Account.class);
+        Root<Account> from = query.from(Account.class);
+        query.select(from);
+        query.where(builder.equal(from.get("accountNumber"), accountNumber));
+        List<Account> items = entityManager.createQuery(query).getResultList();
 
-        } catch (Exception re) {
-            throw re;
+        if (!items.isEmpty()) {
+
+            return items.getFirst();
         }
+        return null;
+
     }
 
     /**
@@ -311,22 +332,20 @@ public class PortfolioHome {
      */
     private Portfolio findPortfolioByName(String name) {
 
-        try {
-            EntityManager entityManager = EntityManagerHelper.getEntityManager();
-            CriteriaBuilder builder = entityManager.getCriteriaBuilder();
-            CriteriaQuery<Portfolio> query = builder.createQuery(Portfolio.class);
-            Root<Portfolio> from = query.from(Portfolio.class);
-            query.select(from);
-            query.where(builder.equal(from.get("name"), name));
-            List<Portfolio> items = entityManager.createQuery(query).getResultList();
-            if (items.size() > 0) {
-                return items.get(0);
-            }
-            return null;
+        EntityManager entityManager = EntityManagerHelper.getEntityManager();
+        CriteriaBuilder builder = entityManager.getCriteriaBuilder();
+        CriteriaQuery<Portfolio> query = builder.createQuery(Portfolio.class);
+        Root<Portfolio> from = query.from(Portfolio.class);
+        query.select(from);
+        query.where(builder.equal(from.get("name"), name));
+        List<Portfolio> items = entityManager.createQuery(query).getResultList();
 
-        } catch (Exception re) {
-            throw re;
+        if (!items.isEmpty()) {
+
+            return items.getFirst();
         }
+        return null;
+
     }
 
     /**
@@ -338,34 +357,35 @@ public class PortfolioHome {
      */
     private PortfolioAccount findByNameAndAccountNumber(String portfolioName, String accountNumber) {
 
-        try {
-            EntityManager entityManager = EntityManagerHelper.getEntityManager();
-            CriteriaBuilder builder = entityManager.getCriteriaBuilder();
-            CriteriaQuery<PortfolioAccount> query = builder.createQuery(PortfolioAccount.class);
-            Root<PortfolioAccount> from = query.from(PortfolioAccount.class);
-            query.select(from);
-            List<Predicate> predicates = new ArrayList<Predicate>();
-            if (null != accountNumber) {
-                Join<PortfolioAccount, Account> account = from.join("account");
-                Predicate predicate = builder.equal(account.get("accountNumber"), accountNumber);
-                predicates.add(predicate);
-            }
-            if (null != portfolioName) {
-                Join<PortfolioAccount, Portfolio> portfolio = from.join("portfolio");
-                Predicate predicate = builder.equal(portfolio.get("name"), portfolioName);
-                predicates.add(predicate);
-            }
+        EntityManager entityManager = EntityManagerHelper.getEntityManager();
+        CriteriaBuilder builder = entityManager.getCriteriaBuilder();
+        CriteriaQuery<PortfolioAccount> query = builder.createQuery(PortfolioAccount.class);
+        Root<PortfolioAccount> from = query.from(PortfolioAccount.class);
+        query.select(from);
+        List<Predicate> predicates = new ArrayList<>();
 
-            query.where(predicates.toArray(new Predicate[]{}));
-            TypedQuery<PortfolioAccount> typedQuery = entityManager.createQuery(query);
-            List<PortfolioAccount> items = typedQuery.getResultList();
-            if (items.size() > 0) {
-                return items.get(0);
-            }
-            return null;
+        if (null != accountNumber) {
 
-        } catch (Exception re) {
-            throw re;
+            Join<PortfolioAccount, Account> account = from.join("account");
+            Predicate predicate = builder.equal(account.get("accountNumber"), accountNumber);
+            predicates.add(predicate);
         }
+        if (null != portfolioName) {
+
+            Join<PortfolioAccount, Portfolio> portfolio = from.join("portfolio");
+            Predicate predicate = builder.equal(portfolio.get("name"), portfolioName);
+            predicates.add(predicate);
+        }
+
+        query.where(predicates.toArray(new Predicate[]{}));
+        TypedQuery<PortfolioAccount> typedQuery = entityManager.createQuery(query);
+        List<PortfolioAccount> items = typedQuery.getResultList();
+
+        if (!items.isEmpty()) {
+
+            return items.getFirst();
+        }
+        return null;
+
     }
 }
