@@ -89,7 +89,6 @@ import javax.swing.event.ListSelectionEvent;
 import javax.swing.event.ListSelectionListener;
 import javax.swing.event.TreeSelectionEvent;
 import javax.swing.event.TreeSelectionListener;
-import javax.swing.text.BadLocationException;
 import javax.swing.text.SimpleAttributeSet;
 import javax.swing.text.StyleConstants;
 import javax.swing.tree.DefaultMutableTreeNode;
@@ -97,8 +96,7 @@ import javax.swing.tree.TreePath;
 import java.awt.*;
 import java.awt.event.ItemEvent;
 import java.awt.event.ItemListener;
-import java.beans.PropertyChangeEvent;
-import java.beans.PropertyChangeListener;
+import java.io.Serial;
 import java.math.BigDecimal;
 import java.text.NumberFormat;
 import java.time.ZonedDateTime;
@@ -111,6 +109,7 @@ public class ContractPanel extends BasePanel implements TreeSelectionListener, C
     /**
      *
      */
+    @Serial
     private static final long serialVersionUID = 4026209743607182423L;
 
     private Tradingdays m_tradingdays = null;
@@ -127,12 +126,11 @@ public class ContractPanel extends BasePanel implements TreeSelectionListener, C
     private BaseButton cancelButton = null;
     private BaseButton cancelStrategiesButton = null;
     private BaseButton refreshButton = null;
-    private BaseButton closeAllButton = null;
     private BaseButton closeAllPositionsButton = null;
     private BaseButton propertiesButton = null;
     private DecodeComboBoxEditor periodEditorComboBox = null;
     private Integer backfillOffsetDays = 0;
-    private Boolean connected = new Boolean(false);
+    private Boolean connected = false;
     private static final NumberFormat currencyFormater = NumberFormat.getCurrencyInstance();
     private static final SimpleAttributeSet bold = new SimpleAttributeSet();
     private static final SimpleAttributeSet colorRedAttr = new SimpleAttributeSet();
@@ -176,7 +174,7 @@ public class ContractPanel extends BasePanel implements TreeSelectionListener, C
             cancelStrategiesButton = new BaseButton(controller, BaseUIPropertyCodes.CANCEL);
             cancelStrategiesButton.setToolTipText("Cancel Strategy");
             refreshButton = new BaseButton(this, BaseUIPropertyCodes.REFRESH);
-            closeAllButton = new BaseButton(this, BaseUIPropertyCodes.CLOSE_ALL);
+            BaseButton closeAllButton = new BaseButton(this, BaseUIPropertyCodes.CLOSE_ALL);
             closeAllPositionsButton = new BaseButton(controller, BaseUIPropertyCodes.CLOSE_ALL);
             closeAllPositionsButton.setToolTipText("Cancel Orders & Close Position");
             m_tradeOrderModel = new TradeOrderTableModel();
@@ -297,7 +295,7 @@ public class ContractPanel extends BasePanel implements TreeSelectionListener, C
     /**
      * Method doProperties.
      *
-     * @param series IndicatorSeries
+     * @param instance TradeOrder
      */
 
     public void doProperties(final TradeOrder instance) {
@@ -305,24 +303,22 @@ public class ContractPanel extends BasePanel implements TreeSelectionListener, C
 
             if (null == instance.getTradestrategy().getPortfolio().getIndividualAccount()) {
                 AllocationMethodPanel allocationMethodPanel = new AllocationMethodPanel(instance);
-                if (null != allocationMethodPanel) {
-                    TextDialog dialog = new TextDialog(this.getFrame(), "FA Account Properties", true,
-                            allocationMethodPanel);
-                    dialog.setLocationRelativeTo(this);
-                    dialog.setVisible(true);
-                    if (!dialog.getCancel()) {
-                        if (null != instance.getFAProfile()) {
-                            instance.setFAGroup(null);
-                            instance.setFAMethod(null);
-                            instance.setFAPercent(null);
+                TextDialog dialog = new TextDialog(this.getFrame(), "FA Account Properties", true,
+                        allocationMethodPanel);
+                dialog.setLocationRelativeTo(this);
+                dialog.setVisible(true);
+                if (!dialog.getCancel()) {
+                    if (null != instance.getFAProfile()) {
+                        instance.setFAGroup(null);
+                        instance.setFAMethod(null);
+                        instance.setFAPercent(null);
+                        instance.setAccountNumber(null);
+                    } else {
+                        if (null != instance.getFAGroup()) {
                             instance.setAccountNumber(null);
                         } else {
-                            if (null != instance.getFAGroup()) {
-                                instance.setAccountNumber(null);
-                            } else {
-                                instance.setAccountNumber(instance.getTradestrategy().getPortfolio()
-                                        .getIndividualAccount().getAccountNumber());
-                            }
+                            instance.setAccountNumber(instance.getTradestrategy().getPortfolio()
+                                    .getIndividualAccount().getAccountNumber());
                         }
                     }
                 }
@@ -342,7 +338,7 @@ public class ContractPanel extends BasePanel implements TreeSelectionListener, C
         try {
             int tabsCount = m_jTabbedPaneContract.getTabCount();
             for (int index = 0; index < tabsCount; index++) {
-                doClose(new Integer(0));
+                doClose(0);
             }
             m_tree.clearSelection();
         } catch (Exception ex) {
@@ -442,19 +438,17 @@ public class ContractPanel extends BasePanel implements TreeSelectionListener, C
      */
     public void doRefresh(final Tradestrategy tradestrategy) {
         try {
-            SwingUtilities.invokeLater(new Runnable() {
-                public void run() {
-                    try {
-                        getFrame().setCursor(Cursor.getPredefinedCursor(Cursor.WAIT_CURSOR));
-                        ChartPanel currentTab = (ChartPanel) m_jTabbedPaneContract.getSelectedComponent();
-                        if (null != currentTab) {
-                            if (currentTab.getTradestrategy().equals(tradestrategy)) {
-                                reFreshTab();
-                            }
+            SwingUtilities.invokeLater(() -> {
+                try {
+                    getFrame().setCursor(Cursor.getPredefinedCursor(Cursor.WAIT_CURSOR));
+                    ChartPanel currentTab = (ChartPanel) m_jTabbedPaneContract.getSelectedComponent();
+                    if (null != currentTab) {
+                        if (currentTab.getTradestrategy().equals(tradestrategy)) {
+                            reFreshTab();
                         }
-                    } finally {
-                        getFrame().setCursor(Cursor.getDefaultCursor());
                     }
+                } finally {
+                    getFrame().setCursor(Cursor.getDefaultCursor());
                 }
             });
 
@@ -466,8 +460,8 @@ public class ContractPanel extends BasePanel implements TreeSelectionListener, C
     /**
      * Method valueChanged.
      *
-     * @param e TreeSelectionEvent
-     * @see javax.swing.event.TreeSelectionListener#valueChanged(TreeSelectionEvent)
+     * @param evt TreeSelectionEvent
+     * @see TreeSelectionListener#valueChanged(TreeSelectionEvent)
      */
     public void valueChanged(TreeSelectionEvent evt) {
 
@@ -484,8 +478,7 @@ public class ContractPanel extends BasePanel implements TreeSelectionListener, C
 
             Object nodeInfo = ((DefaultMutableTreeNode) path.getLastPathComponent()).getUserObject();
 
-            if (nodeInfo instanceof Tradestrategy) {
-                Tradestrategy tradestrategy = (Tradestrategy) nodeInfo;
+            if (nodeInfo instanceof Tradestrategy tradestrategy) {
                 periodEditorComboBox.setItem(BarSize.newInstance(tradestrategy.getBarSize()));
                 int currentTabIndex = -1;
                 for (int index = 0; index < m_jTabbedPaneContract.getTabCount(); index++) {
@@ -526,12 +519,11 @@ public class ContractPanel extends BasePanel implements TreeSelectionListener, C
      * Method stateChanged. Different tab selected.
      *
      * @param evt ChangeEvent
-     * @see javax.swing.event.ChangeListener#stateChanged(ChangeEvent)
+     * @see ChangeListener#stateChanged(ChangeEvent)
      */
     public void stateChanged(ChangeEvent evt) {
         // When a different tab is selected set the index
-        if (evt.getSource() instanceof JTabbedPane) {
-            JTabbedPane selectedTab = (JTabbedPane) evt.getSource();
+        if (evt.getSource() instanceof JTabbedPane selectedTab) {
             if (selectedTab.isShowing()) {
                 this.reFreshTab();
             }
@@ -552,14 +544,17 @@ public class ContractPanel extends BasePanel implements TreeSelectionListener, C
      * Method itemStateChanged.
      *
      * @param e ItemEvent
-     * @see java.awt.event.ItemListener#itemStateChanged(ItemEvent)
+     * @see ItemListener#itemStateChanged(ItemEvent)
      */
     public void itemStateChanged(ItemEvent e) {
 
         if (e.getStateChange() == ItemEvent.SELECTED) {
 
             ChartPanel currentTab = (ChartPanel) m_jTabbedPaneContract.getSelectedComponent();
-            Integer newPeriod = new Integer(((BarSize) e.getItem()).getCode());
+            BarSize barSize = (BarSize) e.getItem();
+            Integer newPeriod = BarSize.getSeconds(barSize.getCode());
+            //TODO: Fix this
+            //Integer newPeriod = Integer.valueOf(barSize.getSeconds(barSize.getValue()));
 
             if (null != currentTab && !this.isConnected()) {
                 if (newPeriod.equals(BarSize.DAY)) {
@@ -592,12 +587,11 @@ public class ContractPanel extends BasePanel implements TreeSelectionListener, C
      *
      * @param tradestrategy Tradestrategy
      * @return ChartPanel
-     * @throws PersistentModelException
      */
     private ChartPanel createChartPanel(Tradestrategy tradestrategy) throws PersistentModelException {
 
-        ZonedDateTime startDate = null;
-        ZonedDateTime endDate = null;
+        ZonedDateTime startDate;
+        ZonedDateTime endDate;
 
         if (null == tradestrategy.getStrategyData()) {
             tradestrategy.setStrategyData(StrategyData.create(tradestrategy));
@@ -623,8 +617,7 @@ public class ContractPanel extends BasePanel implements TreeSelectionListener, C
             }
         }
 
-        ChartPanel chartPanel = new ChartPanel(tradestrategy);
-        return chartPanel;
+        return new ChartPanel(tradestrategy);
     }
 
     /**
@@ -636,7 +629,6 @@ public class ContractPanel extends BasePanel implements TreeSelectionListener, C
      * @param tradestrategy Tradestrategy
      * @param startDate     Date
      * @param endDate       Date
-     * @throws PersistentModelException
      */
     private void populateIndicatorCandleSeries(Tradestrategy tradestrategy, ZonedDateTime startDate,
                                                ZonedDateTime endDate) throws PersistentModelException {
@@ -691,7 +683,7 @@ public class ContractPanel extends BasePanel implements TreeSelectionListener, C
          * Method valueChanged.
          *
          * @param event ListSelectionEvent
-         * @see javax.swing.event.ListSelectionListener#valueChanged(ListSelectionEvent)
+         * @see ListSelectionListener#valueChanged(ListSelectionEvent)
          */
         public void valueChanged(ListSelectionEvent event) {
             if (!event.getValueIsAdjusting()) {
@@ -723,9 +715,7 @@ public class ContractPanel extends BasePanel implements TreeSelectionListener, C
     /**
      * Method setStrategyLabel.
      *
-     * @param tradestrategy    Tradestrategy
-     * @param candlestickChart CandlestickChart
-     * @throws BadLocationException
+     * @param tradestrategy Tradestrategy
      */
     private void setStrategyLabel(final Tradestrategy tradestrategy) {
         try {
@@ -758,8 +748,6 @@ public class ContractPanel extends BasePanel implements TreeSelectionListener, C
 
     /**
      * Method reFreshTab.
-     *
-     * @throws BadLocationException
      */
     private void reFreshTab() {
         try {
@@ -829,7 +817,7 @@ public class ContractPanel extends BasePanel implements TreeSelectionListener, C
                     if (order.getIsFilled()) {
                         Integer quantity = order.getFilledQuantity();
                         if (null == prevIdTradePosition
-                                || prevIdTradePosition != order.getTradePosition().getId()) {
+                                || !prevIdTradePosition.equals(order.getTradePosition().getId())) {
                             prevIdTradePosition = order.getTradePosition().getId();
                         }
 
@@ -923,9 +911,8 @@ public class ContractPanel extends BasePanel implements TreeSelectionListener, C
      * Method enableChartButtons.
      *
      * @param tradestrategy Tradestrategy
-     * @throws Exception
      */
-    private void enableChartButtons(final Tradestrategy tradestrategy) throws Exception {
+    private void enableChartButtons(final Tradestrategy tradestrategy) {
         propertiesButton.setEnabled(false);
         executeButton.setEnabled(false);
         closeAllPositionsButton.setEnabled(false);
@@ -958,14 +945,15 @@ public class ContractPanel extends BasePanel implements TreeSelectionListener, C
     /**
      *
      */
-    class ChartPanel extends JPanel {
+    static class ChartPanel extends JPanel {
 
         /**
          *
          */
+        @Serial
         private static final long serialVersionUID = 6151552506157648783L;
-        private Tradestrategy tradestrategy = null;
-        private CandlestickChart candlestickChart = null;
+        private Tradestrategy tradestrategy;
+        private final CandlestickChart candlestickChart;
 
         /**
          * Constructor for ChartPanel.
@@ -1016,18 +1004,18 @@ public class ContractPanel extends BasePanel implements TreeSelectionListener, C
     /**
      *
      */
-    class AllocationMethodPanel extends JPanel {
+    static class AllocationMethodPanel extends JPanel {
 
         /**
          *
          */
+        @Serial
         private static final long serialVersionUID = 5972331201407363985L;
 
         /**
          * Constructor for FAPropertiesPanel.
          *
          * @param tradeOrder TradeOrder
-         * @throws Exception
          */
 
         public AllocationMethodPanel(final TradeOrder tradeOrder) throws Exception {
@@ -1057,14 +1045,12 @@ public class ContractPanel extends BasePanel implements TreeSelectionListener, C
             profileEditorComboBox.setRenderer(profileTableRenderer);
             if (null != tradeOrder.getFAProfile())
                 profileEditorComboBox.setItem(DAOProfile.newInstance(tradeOrder.getFAProfile()));
-            profileEditorComboBox.addItemListener(new ItemListener() {
-                public void itemStateChanged(ItemEvent e) {
-                    if (e.getStateChange() == ItemEvent.SELECTED) {
-                        if (!Decode.NONE.equals(((DAOProfile) e.getItem()).getDisplayName())) {
-                            tradeOrder.setFAProfile(((Portfolio) ((DAOProfile) e.getItem()).getObject()).getName());
-                        } else {
-                            tradeOrder.setFAProfile(null);
-                        }
+            profileEditorComboBox.addItemListener(e -> {
+                if (e.getStateChange() == ItemEvent.SELECTED) {
+                    if (!Decode.NONE.equals(((DAOProfile) e.getItem()).getDisplayName())) {
+                        tradeOrder.setFAProfile(((Portfolio) ((DAOProfile) e.getItem()).getObject()).getName());
+                    } else {
+                        tradeOrder.setFAProfile(null);
                     }
                 }
             });
@@ -1075,14 +1061,12 @@ public class ContractPanel extends BasePanel implements TreeSelectionListener, C
             groupEditorComboBox.setRenderer(groupTableRenderer);
             if (null != tradeOrder.getFAGroup())
                 groupEditorComboBox.setItem(DAOGroup.newInstance(tradeOrder.getFAGroup()));
-            groupEditorComboBox.addItemListener(new ItemListener() {
-                public void itemStateChanged(ItemEvent e) {
-                    if (e.getStateChange() == ItemEvent.SELECTED) {
-                        if (!Decode.NONE.equals(((DAOGroup) e.getItem()).getDisplayName())) {
-                            tradeOrder.setFAGroup(((Portfolio) ((DAOGroup) e.getItem()).getObject()).getName());
-                        } else {
-                            tradeOrder.setFAGroup(null);
-                        }
+            groupEditorComboBox.addItemListener(e -> {
+                if (e.getStateChange() == ItemEvent.SELECTED) {
+                    if (!Decode.NONE.equals(((DAOGroup) e.getItem()).getDisplayName())) {
+                        tradeOrder.setFAGroup(((Portfolio) ((DAOGroup) e.getItem()).getObject()).getName());
+                    } else {
+                        tradeOrder.setFAGroup(null);
                     }
                 }
             });
@@ -1093,31 +1077,30 @@ public class ContractPanel extends BasePanel implements TreeSelectionListener, C
             methodEditorComboBox.setRenderer(methodTableRenderer);
             if (null != tradeOrder.getFAMethod())
                 methodEditorComboBox.setItem(AllocationMethod.newInstance(tradeOrder.getFAMethod()));
-            methodEditorComboBox.addItemListener(new ItemListener() {
-                public void itemStateChanged(ItemEvent e) {
-                    if (e.getStateChange() == ItemEvent.SELECTED) {
-                        if (!Decode.NONE.equals(((AllocationMethod) e.getItem()).getDisplayName())) {
-                            tradeOrder.setFAMethod(((AllocationMethod) e.getItem()).getCode());
-                        } else {
-                            tradeOrder.setFAMethod(null);
-                        }
+            methodEditorComboBox.addItemListener(e -> {
+                if (e.getStateChange() == ItemEvent.SELECTED) {
+                    if (!Decode.NONE.equals(((AllocationMethod) e.getItem()).getDisplayName())) {
+                        tradeOrder.setFAMethod(((AllocationMethod) e.getItem()).getCode());
+                    } else {
+                        tradeOrder.setFAMethod(null);
                     }
                 }
             });
             NumberFormat percentFormat = NumberFormat.getNumberInstance();
             percentFormat.setMinimumFractionDigits(2);
             final JFormattedTextField percentTextField = new JFormattedTextField(percentFormat);
-            if (null != tradeOrder.getFAPercent())
-                percentTextField.setText(Integer.toString(new Integer(tradeOrder.getFAPercent().intValue())));
-            percentTextField.addPropertyChangeListener(new PropertyChangeListener() {
-                public void propertyChange(PropertyChangeEvent e) {
-                    Object source = e.getSource();
-                    if ("value".equals(e.getPropertyName())) {
-                        if (source == percentTextField) {
-                            if (percentTextField.isEditValid() && null != e.getNewValue()) {
-                                Number rate = ((Number) percentTextField.getValue()).doubleValue();
-                                tradeOrder.setFAPercent(new BigDecimal(rate.doubleValue()));
-                            }
+
+            if (null != tradeOrder.getFAPercent()) {
+                percentTextField.setText(Integer.toString(tradeOrder.getFAPercent().intValue()));
+            }
+
+            percentTextField.addPropertyChangeListener(e -> {
+                Object source = e.getSource();
+                if ("value".equals(e.getPropertyName())) {
+                    if (source == percentTextField) {
+                        if (percentTextField.isEditValid() && null != e.getNewValue()) {
+                            Number rate = ((Number) percentTextField.getValue()).doubleValue();
+                            tradeOrder.setFAPercent(BigDecimal.valueOf(rate.doubleValue()));
                         }
                     }
                 }
