@@ -43,6 +43,7 @@ import org.trade.core.valuetype.YesNo;
 import org.trade.dictionary.valuetype.DAOStrategyManager;
 import org.trade.persistent.dao.Strategy;
 
+import java.io.Serial;
 import java.util.Vector;
 
 /**
@@ -52,6 +53,7 @@ public class StrategyTableModel extends AspectTableModel {
     /**
      *
      */
+    @Serial
     private static final long serialVersionUID = 3087514589731145479L;
 
     private static final String NAME = "Name*";
@@ -101,7 +103,7 @@ public class StrategyTableModel extends AspectTableModel {
         this.clearAll();
         if (!getData().getAspect().isEmpty()) {
             for (final Aspect element : getData().getAspect()) {
-                final Vector<Object> newRow = new Vector<Object>();
+                final Vector<Object> newRow = new Vector<>();
                 getNewRow(newRow, (Strategy) element);
                 rows.add(newRow);
             }
@@ -144,7 +146,7 @@ public class StrategyTableModel extends AspectTableModel {
                 break;
             }
             case 4: {
-                element.setMarketData(new Boolean(((YesNo) value).getCode()));
+                element.setMarketData(Boolean.valueOf(((YesNo) value).getCode()));
                 break;
             }
             default: {
@@ -178,7 +180,7 @@ public class StrategyTableModel extends AspectTableModel {
         final Strategy element = new Strategy();
         getData().getAspect().add(element);
         getData().setDirty(true);
-        final Vector<Object> newRow = new Vector<Object>();
+        final Vector<Object> newRow = new Vector<>();
         getNewRow(newRow, element);
         rows.add(newRow);
         // Tell the listeners a new table has arrived.
