@@ -35,8 +35,12 @@
  */
 package org.trade.strategy;
 
-import org.junit.*;
+import org.junit.After;
+import org.junit.AfterClass;
+import org.junit.Before;
+import org.junit.BeforeClass;
 import org.junit.Rule;
+import org.junit.Test;
 import org.junit.rules.TestName;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -47,21 +51,39 @@ import org.trade.core.properties.ConfigProperties;
 import org.trade.core.util.DynamicCode;
 import org.trade.core.util.TradingCalendar;
 import org.trade.core.valuetype.Money;
-import org.trade.dictionary.valuetype.*;
+import org.trade.dictionary.valuetype.Action;
+import org.trade.dictionary.valuetype.BarSize;
+import org.trade.dictionary.valuetype.DAOEntryLimit;
+import org.trade.dictionary.valuetype.OrderStatus;
+import org.trade.dictionary.valuetype.OrderType;
+import org.trade.dictionary.valuetype.OverrideConstraints;
+import org.trade.dictionary.valuetype.Side;
+import org.trade.dictionary.valuetype.TimeInForce;
+import org.trade.dictionary.valuetype.TradestrategyStatus;
+import org.trade.dictionary.valuetype.TriggerMethod;
 import org.trade.persistent.IPersistentModel;
 import org.trade.persistent.PersistentModelException;
-import org.trade.persistent.dao.*;
+import org.trade.persistent.dao.Entrylimit;
+import org.trade.persistent.dao.TradeOrder;
+import org.trade.persistent.dao.TradeOrderfill;
+import org.trade.persistent.dao.Tradestrategy;
+import org.trade.persistent.dao.TradestrategyTest;
 import org.trade.strategy.data.CandleSeries;
 import org.trade.strategy.data.StrategyData;
 import org.trade.strategy.data.candle.CandleItem;
 import org.trade.ui.TradeAppLoadConfig;
 
 import java.io.File;
+import java.io.Serial;
 import java.math.BigDecimal;
 import java.time.ZonedDateTime;
 import java.util.Vector;
 
-import static org.junit.Assert.*;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertTrue;
+import static org.junit.Assert.fail;
 
 /**
  *
@@ -72,7 +94,6 @@ public class AbstractStrategyTest {
     @Rule
     public TestName name = new TestName();
 
-    private String symbol = "TEST";
     private IBrokerModel m_brokerModel = null;
     private IPersistentModel tradePersistentModel = null;
     private Tradestrategy tradestrategy = null;
@@ -82,8 +103,6 @@ public class AbstractStrategyTest {
 
     /**
      * Method setUpBeforeClass.
-     *
-     * @throws java.lang.Exception
      */
     @BeforeClass
     public static void setUpBeforeClass() throws Exception {
@@ -91,8 +110,6 @@ public class AbstractStrategyTest {
 
     /**
      * Method setUp.
-     *
-     * @throws java.lang.Exception
      */
     @Before
     public void setUp() throws Exception {
@@ -107,9 +124,10 @@ public class AbstractStrategyTest {
             m_templateName = ConfigProperties.getPropAsString("trade.strategy.template");
             m_strategyDir = ConfigProperties.getPropAsString("trade.strategy.default.dir");
             Integer clientId = ConfigProperties.getPropAsInt("trade.tws.clientId");
-            Integer port = new Integer(ConfigProperties.getPropAsString("trade.tws.port"));
+            Integer port = Integer.valueOf(ConfigProperties.getPropAsString("trade.tws.port"));
             String host = ConfigProperties.getPropAsString("trade.tws.host");
             m_brokerModel.onConnect(host, port, clientId);
+            String symbol = "TEST";
             this.tradestrategy = TradestrategyTest.getTestTradestrategy(symbol);
             assertNotNull("1", this.tradestrategy);
 
@@ -123,7 +141,7 @@ public class AbstractStrategyTest {
                 } while (!strategyProxy.isWaiting());
 
             } catch (InterruptedException e) {
-                _log.info(" Thread interupt: " + e.getMessage());
+                _log.info(" Thread interupt: {}", e.getMessage());
             }
             _log.info(" Test Initialized");
 
@@ -136,8 +154,6 @@ public class AbstractStrategyTest {
 
     /**
      * Method tearDown.
-     *
-     * @throws java.lang.Exception
      */
     @After
     public void tearDown() throws Exception {
@@ -148,8 +164,6 @@ public class AbstractStrategyTest {
 
     /**
      * Method tearDownAfterClass.
-     *
-     * @throws java.lang.Exception
      */
     @AfterClass
     public static void tearDownAfterClass() throws Exception {
@@ -160,7 +174,7 @@ public class AbstractStrategyTest {
 
         try {
             tradestrategy.setTrade(true);
-            Vector<Object> parm = new Vector<Object>(0);
+            Vector<Object> parm = new Vector<>(0);
             parm.add(m_brokerModel);
             parm.add(this.tradestrategy.getStrategyData());
             parm.add(this.tradestrategy.getId());
@@ -176,15 +190,10 @@ public class AbstractStrategyTest {
                 } while (!strategyProxy.isWaiting());
 
             } catch (InterruptedException e) {
-                _log.info(" Thread interupt: " + e.getMessage());
+                _log.info(" Thread interupt: {}", e.getMessage());
             }
-            if (Side.BOT.equals(this.tradestrategy.getSide())) {
-                StrategyData.doDummyData(this.tradestrategy.getStrategyData().getBaseCandleSeries(),
-                        this.tradestrategy.getTradingday(), 1, BarSize.FIVE_MIN, true, 0);
-            } else {
-                StrategyData.doDummyData(this.tradestrategy.getStrategyData().getBaseCandleSeries(),
-                        this.tradestrategy.getTradingday(), 1, BarSize.FIVE_MIN, false, 0);
-            }
+            StrategyData.doDummyData(this.tradestrategy.getStrategyData().getBaseCandleSeries(),
+                    this.tradestrategy.getTradingday(), 1, BarSize.FIVE_MIN, Side.BOT.equals(this.tradestrategy.getSide()), 0);
             strategyProxy.cancel();
 
         } catch (Exception | AssertionError ex) {
@@ -226,25 +235,19 @@ public class AbstractStrategyTest {
                      * Position has been opened submit the target and stop
                      * orders. Two targets at 3R and 6R
                      */
-                    _log.info("Open position submit Stop/Tgt orders Symbol: "
-                            + openOrder.getTradestrategy().getContract().getSymbol());
+                    _log.info("Open position submit Stop/Tgt orders Symbol: {}", openOrder.getTradestrategy().getContract().getSymbol());
                     strategyProxy.createStopAndTargetOrder(strategyProxy.getOpenPositionOrder(), 1, new Money(0.01), 3,
                             new Money(0.02), strategyProxy.getOpenTradePosition().getOpenQuantity() / 2, true);
 
                     strategyProxy.createStopAndTargetOrder(strategyProxy.getOpenPositionOrder(), 1, new Money(0.01), 3,
                             new Money(0.02), strategyProxy.getOpenTradePosition().getOpenQuantity() / 2, true);
 
-                    assertNotNull("2", this.strategyProxy.isPositionCovered());
+                    this.strategyProxy.isPositionCovered();
                 }
             }
 
-            if (Side.BOT.equals(this.tradestrategy.getSide())) {
-                StrategyData.doDummyData(this.tradestrategy.getStrategyData().getBaseCandleSeries(),
-                        this.tradestrategy.getTradingday(), 1, BarSize.FIVE_MIN, true, 0);
-            } else {
-                StrategyData.doDummyData(this.tradestrategy.getStrategyData().getBaseCandleSeries(),
-                        this.tradestrategy.getTradingday(), 1, BarSize.FIVE_MIN, false, 0);
-            }
+            StrategyData.doDummyData(this.tradestrategy.getStrategyData().getBaseCandleSeries(),
+                    this.tradestrategy.getTradingday(), 1, BarSize.FIVE_MIN, Side.BOT.equals(this.tradestrategy.getSide()), 0);
             strategyProxy.cancel();
 
         } catch (Exception | AssertionError ex) {
@@ -357,7 +360,7 @@ public class AbstractStrategyTest {
     @Test
     public void testClosePosition() {
         try {
-            createOpenBuyPosition(new Money(100), 1000, Action.BUY, true);
+            createOpenBuyPosition(new Money(100), Action.BUY, true);
             TradeOrder order = this.strategyProxy.closePosition(true);
             assertNotNull(order);
         } catch (Exception | AssertionError ex) {
@@ -423,7 +426,7 @@ public class AbstractStrategyTest {
             Money price = new Money(20.00);
             DAOEntryLimit entryLimits = new DAOEntryLimit();
             Entrylimit entryLimit = entryLimits.getValue(price);
-            entryLimit.setPercentOfMargin(new BigDecimal(0.5));
+            entryLimit.setPercentOfMargin(new BigDecimal("0.5"));
             entryLimit = tradePersistentModel.persistAspect(entryLimit);
 
             TradeOrder result = this.strategyProxy.createRiskOpenPosition(Action.BUY, new Money(20.00),
@@ -432,7 +435,7 @@ public class AbstractStrategyTest {
             assertEquals("1", 2500, result.getQuantity(), 0);
             entryLimit.setPercentOfMargin(new BigDecimal(0));
             entryLimit = tradePersistentModel.persistAspect(entryLimit);
-            assertEquals("2", entryLimit.getPercentOfMargin(), new BigDecimal(0));
+            assertEquals("2", new BigDecimal(0), entryLimit.getPercentOfMargin());
         } catch (Exception | AssertionError ex) {
             String msg = "Error running " + name.getMethodName() + " msg: " + ex.getMessage();
             _log.error(msg);
@@ -453,7 +456,7 @@ public class AbstractStrategyTest {
             Money price = new Money(45.75);
             DAOEntryLimit entryLimits = new DAOEntryLimit();
             Entrylimit entryLimit = entryLimits.getValue(price);
-            entryLimit.setPercentOfMargin(new BigDecimal(0.5));
+            entryLimit.setPercentOfMargin(new BigDecimal("0.5"));
             entryLimit = tradePersistentModel.persistAspect(entryLimit);
 
             TradeOrder openOrder = this.strategyProxy.createRiskOpenPosition(Action.SELL, new Money(45.75),
@@ -461,9 +464,9 @@ public class AbstractStrategyTest {
 
             assertEquals("1", 400, openOrder.getQuantity(), 0);
 
-            TradeOrderfill orderFill = new TradeOrderfill(openOrder, "Paper", new BigDecimal(45.74),
+            TradeOrderfill orderFill = new TradeOrderfill(openOrder, "Paper", new BigDecimal("45.74"),
                     openOrder.getQuantity(), this.tradestrategy.getContract().getExchange(), "1234567",
-                    new BigDecimal(45.74), openOrder.getQuantity(), Side.SLD,
+                    new BigDecimal("45.74"), openOrder.getQuantity(), Side.SLD,
                     TradingCalendar.getDateTimeNowMarketTimeZone());
             openOrder.addTradeOrderfill(orderFill);
             openOrder.setStatus(OrderStatus.FILLED);
@@ -485,11 +488,9 @@ public class AbstractStrategyTest {
             this.strategyProxy.createStopAndTargetOrder(this.strategyProxy.getOpenPositionOrder(), 1, new Money(0.01),
                     7, new Money(0.02), this.strategyProxy.getOpenPositionOrder().getQuantity() / 2, true);
             for (TradeOrder order : this.strategyProxy.getTradestrategy().getTradeOrders()) {
-                _log.info("Key: " + order.getOrderKey() + " Qty: " + order.getQuantity() + " Aux Price: "
-                        + order.getAuxPrice() + " Lmt Price: " + order.getLimitPrice() + " Stop Price: "
-                        + order.getStopPrice());
+                _log.info("Key: {} Qty: {} Aux Price: {} Lmt Price: {} Stop Price: {}", order.getOrderKey(), order.getQuantity(), order.getAuxPrice(), order.getLimitPrice(), order.getStopPrice());
             }
-            assertNotNull("3", this.strategyProxy.isPositionCovered());
+            this.strategyProxy.isPositionCovered();
             entryLimit.setPercentOfMargin(new BigDecimal(0));
             tradePersistentModel.persistAspect(entryLimit);
         } catch (Exception | AssertionError ex) {
@@ -520,7 +521,7 @@ public class AbstractStrategyTest {
     @Test
     public void testIsTradeConvered() {
         try {
-            createOpenBuyPosition(new Money(100), 1000, Action.BUY, false);
+            createOpenBuyPosition(new Money(100), Action.BUY, false);
             assertFalse("1", this.strategyProxy.isPositionCovered());
         } catch (Exception | AssertionError ex) {
             String msg = "Error running " + name.getMethodName() + " msg: " + ex.getMessage();
@@ -532,11 +533,11 @@ public class AbstractStrategyTest {
     @Test
     public void testCreateStopAndTargetOrder() {
         try {
-            createOpenBuyPosition(new Money(100), 1000, Action.BUY, true);
+            createOpenBuyPosition(new Money(100), Action.BUY, true);
             TradeOrder targetOne = this.strategyProxy.createStopAndTargetOrder(new Money(99.0), new Money(103.99), 100,
                     true);
             assertNotNull("1", targetOne);
-            assertNotNull("2", this.strategyProxy.isPositionCovered());
+            this.strategyProxy.isPositionCovered();
         } catch (Exception | AssertionError ex) {
             String msg = "Error running " + name.getMethodName() + " msg: " + ex.getMessage();
             _log.error(msg);
@@ -547,10 +548,10 @@ public class AbstractStrategyTest {
     @Test
     public void testCreateStopAndTargetOrderPercentQty() {
         try {
-            createOpenBuyPosition(new Money(100), 1000, Action.BUY, true);
+            createOpenBuyPosition(new Money(100), Action.BUY, true);
             this.strategyProxy.createStopAndTargetOrder(this.strategyProxy.getOpenPositionOrder(), 2, new Money(0.01),
                     4, new Money(0.02), this.strategyProxy.getOpenPositionOrder().getQuantity() / 2, true);
-            assertNotNull("1", this.strategyProxy.isPositionCovered());
+            this.strategyProxy.isPositionCovered();
         } catch (Exception | AssertionError ex) {
             String msg = "Error running " + name.getMethodName() + " msg: " + ex.getMessage();
             _log.error(msg);
@@ -561,7 +562,7 @@ public class AbstractStrategyTest {
     @Test
     public void testGetStopPriceForPositionRisk() {
         try {
-            createOpenBuyPosition(new Money(100), 1000, Action.BUY, true);
+            createOpenBuyPosition(new Money(100), Action.BUY, true);
             Money price = this.strategyProxy.getStopPriceForPositionRisk(this.strategyProxy.getOpenPositionOrder(), 2);
             assertNotNull("1", price);
         } catch (Exception | AssertionError ex) {
@@ -574,7 +575,7 @@ public class AbstractStrategyTest {
     @Test
     public void testCancelOrdersClosePosition() {
         try {
-            createOpenBuyPosition(new Money(100), 1000, Action.BUY, true);
+            createOpenBuyPosition(new Money(100), Action.BUY, true);
             this.strategyProxy.cancelOrdersClosePosition(true);
             this.reFreshPositionOrders();
             assertTrue("1", this.strategyProxy.isPositionCovered());
@@ -588,7 +589,7 @@ public class AbstractStrategyTest {
     @Test
     public void testMoveStopOCAPrice() {
         try {
-            this.createOpenBuyPosition(new Money(100), 1000, Action.BUY, true);
+            this.createOpenBuyPosition(new Money(100), Action.BUY, true);
             TradeOrder targetOne = this.strategyProxy.createStopAndTargetOrder(new Money(99.0), new Money(103.99),
                     this.strategyProxy.getOpenPositionOrder().getQuantity() / 2, true);
             assertNotNull("1", targetOne);
@@ -612,7 +613,7 @@ public class AbstractStrategyTest {
     @Test
     public void testCancelAllOrders() {
         try {
-            createOpenBuyPosition(new Money(100), 1000, Action.BUY, false);
+            createOpenBuyPosition(new Money(100), Action.BUY, false);
             this.strategyProxy.cancelAllOrders();
             assertFalse("1", this.strategyProxy.isThereOpenPosition());
         } catch (Exception | AssertionError ex) {
@@ -625,7 +626,7 @@ public class AbstractStrategyTest {
     @Test
     public void testIsTradeOpen() {
         try {
-            createOpenBuyPosition(new Money(100), 1000, Action.BUY, true);
+            createOpenBuyPosition(new Money(100), Action.BUY, true);
             assertTrue("1", this.strategyProxy.isThereOpenPosition());
         } catch (Exception | AssertionError ex) {
             String msg = "Error running " + name.getMethodName() + " msg: " + ex.getMessage();
@@ -659,7 +660,7 @@ public class AbstractStrategyTest {
     public void testGetCandle() {
         try {
             this.tradestrategy.getStrategyData().buildCandle(this.tradestrategy.getTradingday().getOpen(), 100d, 101d,
-                    99d, 100d, 100000l, 100d, 100, 1, null);
+                    99d, 100d, 100000L, 100d, 100, 1, null);
             CandleItem candleItem = this.strategyProxy.getCandle(this.tradestrategy.getTradingday().getOpen());
             assertNotNull("1", candleItem);
         } catch (Exception | AssertionError ex) {
@@ -672,7 +673,7 @@ public class AbstractStrategyTest {
     @Test
     public void testUpdateTradestrategyStatus() {
         try {
-            createOpenBuyPosition(new Money(100), 1000, Action.BUY, false);
+            createOpenBuyPosition(new Money(100), Action.BUY, false);
             this.strategyProxy.updateTradestrategyStatus(TradestrategyStatus.CLOSED);
         } catch (Exception | AssertionError ex) {
             String msg = "Error running " + name.getMethodName() + " msg: " + ex.getMessage();
@@ -696,7 +697,7 @@ public class AbstractStrategyTest {
     @Test
     public void testGetTradestrategy() {
         try {
-            createOpenBuyPosition(new Money(100), 1000, Action.BUY, false);
+            createOpenBuyPosition(new Money(100), Action.BUY, false);
             assertNotNull("1", this.strategyProxy.getTradestrategy());
         } catch (Exception | AssertionError ex) {
             String msg = "Error running " + name.getMethodName() + " msg: " + ex.getMessage();
@@ -708,7 +709,7 @@ public class AbstractStrategyTest {
     @Test
     public void testGetTradeAccount() {
         try {
-            createOpenBuyPosition(new Money(100), 1000, Action.BUY, false);
+            createOpenBuyPosition(new Money(100), Action.BUY, false);
             assertNotNull("1", this.strategyProxy.getIndividualAccount());
         } catch (Exception | AssertionError ex) {
             String msg = "Error running " + name.getMethodName() + " msg: " + ex.getMessage();
@@ -720,7 +721,7 @@ public class AbstractStrategyTest {
     @Test
     public void testGetTradePosition() {
         try {
-            createOpenBuyPosition(new Money(100), 1000, Action.BUY, true);
+            createOpenBuyPosition(new Money(100), Action.BUY, true);
             assertNotNull("1", this.strategyProxy.getOpenTradePosition());
         } catch (Exception | AssertionError ex) {
             String msg = "Error running " + name.getMethodName() + " msg: " + ex.getMessage();
@@ -732,7 +733,7 @@ public class AbstractStrategyTest {
     @Test
     public void testGetSymbol() {
         try {
-            createOpenBuyPosition(new Money(100), 1000, Action.BUY, false);
+            createOpenBuyPosition(new Money(100), Action.BUY, false);
             assertNotNull("1", this.strategyProxy.getSymbol());
         } catch (Exception | AssertionError ex) {
             String msg = "Error running " + name.getMethodName() + " msg: " + ex.getMessage();
@@ -744,7 +745,7 @@ public class AbstractStrategyTest {
     @Test
     public void testGetOpenPositionOrder() {
         try {
-            createOpenBuyPosition(new Money(100), 1000, Action.BUY, true);
+            createOpenBuyPosition(new Money(100), Action.BUY, true);
             assertNotNull("1", this.strategyProxy.getOpenPositionOrder());
         } catch (Exception | AssertionError ex) {
             String msg = "Error running " + name.getMethodName() + " msg: " + ex.getMessage();
@@ -756,7 +757,7 @@ public class AbstractStrategyTest {
     @Test
     public void testHasActiveOrders() {
         try {
-            createOpenBuyPosition(new Money(100), 1000, Action.BUY, false);
+            createOpenBuyPosition(new Money(100), Action.BUY, false);
             assertTrue("1", this.strategyProxy.hasActiveOrders());
         } catch (Exception | AssertionError ex) {
             String msg = "Error running " + name.getMethodName() + " msg: " + ex.getMessage();
@@ -770,16 +771,14 @@ public class AbstractStrategyTest {
      *
      * @param price            Money
      * @param fillOpenPosition boolean
-     * @throws StrategyRuleException
-     * @throws PersistentModelException
      */
-    private void createOpenBuyPosition(Money price, Integer quantity, String action, boolean fillOpenPosition)
+    private void createOpenBuyPosition(Money price, String action, boolean fillOpenPosition)
             throws StrategyRuleException, PersistentModelException {
         if (!strategyProxy.getTradestrategy().getTradeOrders().isEmpty()) {
             tradePersistentModel.removeTradestrategyTradeOrders(strategyProxy.getTradestrategy());
         }
         TradeOrder tradeOrder = this.strategyProxy.createOrder(tradestrategy.getContract(), action, OrderType.STPLMT,
-                price, price.subtract(new Money(0.2)), quantity, null, null, TriggerMethod.DEFAULT,
+                price, price.subtract(new Money(0.2)), 1000, null, null, TriggerMethod.DEFAULT,
                 OverrideConstraints.YES, TimeInForce.DAY, true, true, null, null, null, null, null, null);
 
         if (fillOpenPosition) {
@@ -818,18 +817,19 @@ public class AbstractStrategyTest {
             strategyProxy.reFreshPositionOrders();
 
         } catch (Exception e) {
-            _log.info("Error refreshing Position Orders: " + e.getMessage());
+            _log.info("Error refreshing Position Orders: {}", e.getMessage());
         }
     }
 
     /**
      *
      */
-    public class StrategyRuleTest extends AbstractStrategyRule {
+    public static class StrategyRuleTest extends AbstractStrategyRule {
 
         /**
          *
          */
+        @Serial
         private static final long serialVersionUID = -3345516391123859703L;
 
         /**
@@ -873,8 +873,7 @@ public class AbstractStrategyTest {
                      * Trade is open kill this Strategy as its job is done.
                      */
                     if (this.isThereOpenPosition()) {
-                        _log.info("Strategy complete open position filled symbol: " + getSymbol() + " startPeriod: "
-                                + startPeriod);
+                        _log.info("Strategy complete open position filled symbol: {} startPeriod: {}", getSymbol(), startPeriod);
                         this.cancel();
                         return;
                     }
@@ -896,15 +895,14 @@ public class AbstractStrategyTest {
                         } else if (startPeriod.equals(TradingCalendar.getDateAtTime(startPeriod, 10, 30, 0))) {
 
                         } else if (startPeriod.isAfter(TradingCalendar.getDateAtTime(startPeriod, 10, 30, 0))) {
-                            _log.info("Rule after 10:30:00 bar, close the "
-                                    + getTradestrategy().getStrategy().getClassName() + " Symbol: " + getSymbol());
+                            _log.info("Rule after 10:30:00 bar, close the {} Symbol: {}", getTradestrategy().getStrategy().getClassName(), getSymbol());
                             // Kill this process we are done!
                             this.cancel();
                         }
                     }
                 }
             } catch (Exception ex) {
-                _log.error("Error  runRule exception: " + ex.getMessage(), ex);
+                _log.error("Error  runRule exception: {}", ex.getMessage(), ex);
                 error(1, 10, "Error  runRule exception: " + ex.getMessage());
             }
         }
